# tutorial-template

./: .dockerignore  .gitignore  .readthedocs.yaml  .readthedocs.yml  Dockerfile  README.md  README.rst  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: main-build.yml
docs/: gettingstarted.md  index.md  quickstart.md  requirements.txt  serversetup.md
docs/functions/: Kriging.md  NoiseKriging.md  NuggetKriging.md  logMargPostFun.Kriging.md  logMargPostFun.NuggetKriging.md  print.Kriging.md  print.NoiseKriging.md  print.NuggetKriging.md  simulate.Kriging.md  simulate.NoiseKriging.md  update.NuggetKriging.md
docs/source/: agent-cli.rst  angloarchitecture.puml  api.rst  architecture.puml  architecture.rst  conf.py  contributing.rst  contribution-guidelines.rst  contribution_guidelines.rst  decision-log.rst  decision.rst  definitions.rst  demo.md  deploying-app-using-nginx.rst  features.rst  gettingstarted  index.rst  install.md  install.rst  libKriging.bib  make_examples.sh  make_functions_examples.sh  math.rst  mpactarchitecture.puml  patient.rst  pyrm-demo.md  pyrm-demo_basic.md  pyrm-syntax.md  quick-start.rst  quickstart.rst  references.rst  requirements.rst  setting-up-docker.rst  start.rst  technical-info  technical-information  technical-information.rst  technical_information  tutorial-intro-chipflow-platform.md  tutorial-intro-chipflow-platform.rst  (+3 more)
examples/: demo1D.ipynb  demo2D.ipynb  plot_gpr_noisy_targets.ipynb  py-demo.ipynb  r-demo.ipynb
src/: index.js
src/webapp/: README.md  package-lock.json  (+2 more)
(+120 files in other folders)
