[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Ross Motley <ross.motley@chipflow.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
myst-parser = "^0.18.1"
sphinx-rtd-theme = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
